# E3TI

./: .gitignore  .readthedocs.yaml  ITO_DDPM.py  README.md  analysis_notupdated.py  conf.py  main.ipynb  minimal_testing_example.ipynb  pyproject.toml  setup_src.sh  setup_umn.sh  utils_ddpm_notupdated.py
.ipynb_checkpoints/: ITO_DDPM-checkpoint.py  main-checkpoint.ipynb  minimal_testing_example-checkpoint.ipynb  train_notupdated-checkpoint.py
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
architechtures/: PaiNN_Like.py  model_equivariance_test.ipynb
architechtures/.ipynb_checkpoints/: LangevinMLP-checkpoint.py  embeddings-checkpoint.py
datasets/: dataset_notupdated.py
datasets/AlanaineDipeptideVacuum/: Viewdataset.ipynb
docs/: conf.py  e3ti.model.embedding.rst  e3ti.rst  index.rst  interpolants.rst  modules.rst  requirements.txt
docs/guides/: examples.rst  getting_started.rst
docs/source/: conf.py
e3ti/: module.py
e3ti/data/: dataset.py  loader.py
e3ti/experiment/: abstract.py  train.py
e3ti/interpolant/: __init__.py  abstract.py  corrector.py  interpolants.py
e3ti/model/: MLP.py
e3ti/prior/: abstract.py  normal.py
src/configs/: base.yaml  paths.yaml
src/data/: dataloader.py
src/e3ti/: module.py  parser.py  utils.py
src/evaluation/: confusion_matrix.py
src/experiments/: evaluate.py  train.py
src/models/: simple_cnn.py
tests/: slurm-42086404.err  slurm-42086404.out  slurm-42118591.err  slurm-42258635.err  slurm-42258635.out  slurm_test.sh  test.py
(+393 files in other folders)
