[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e3ti"
version = "0.1.0"
description = "E3 Tensor Interpolants"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
# We’re using the “flat” layout (no src/). Find the e3ti package + subpackages.
packages = { find = { include = ["e3ti*"] } }

# Include non-.py files shipped under e3ti/data/** in the wheel
[tool.setuptools.package-data]
e3ti = [
  "data/**/*",
]

# (Optional) if you also want non-data files like md, pdb, etc., this wildcard already covers them.
